@@ -1,5 +1,12 @@
 2006-03-29  Eric Anholt  <anholt@FreeBSD.org>
 
+	* hw/kdrive/ephyr/ephyr_draw.c: (ephyrDownloadFromScreen),
+	(ephyrUploadToScreen), (ephyrDrawInit):
+	Add an UploadToScreen implementation, for testing PutImage support, and
+	make the DownloadFromScreen more robust.
+
+2006-03-29  Eric Anholt  <anholt@FreeBSD.org>
+
 	* exa/exa_accel.c: (exaGetImage):
 	* exa/exa_priv.h:
 	Bug #2986: Add acceleration of GetImage using DownloadFromScreen for the
